erDiagram

    %% 用戶
    users {
        bigint id PK
        string name
        string email UK
        string password
        timestamp email_verified_at
        timestamps created_at
        timestamps updated_at
    }

    %% 印刷廠
    printers {
        bigint id PK
        string name
        string contact_name
        string phone
        string line_user_id "LINE 通知目標"
        int working_days "工作天數"
        enum status "active|suspended"
        boolean admin_suspended "管理員強制暫停"
        timestamps created_at
        timestamps updated_at
    }

    %% 規格維度（Table A）例：尺寸、紙張、材質
    spec_dimensions {
        bigint id PK
        string name "尺寸 / 紙張 / 材質"
        string slug UK
        int sort_order
        timestamps created_at
        timestamps updated_at
    }

    %% 規格選項（Table B）例：A4、銅版紙
    spec_options {
        bigint id PK
        bigint spec_dimension_id FK
        string label "銅版紙 / A4 / 霧面"
        decimal price_addon "疊加加價（0 表示基礎選項）"
        int sort_order
        timestamps created_at
        timestamps updated_at
    }

    %% 產品類型（名片、DM、T恤）
    product_types {
        bigint id PK
        string name
        string slug UK
        boolean is_active
        timestamps created_at
        timestamps updated_at
    }

    %% 產品類型與規格維度的關聯（勾選）
    product_type_spec_dimensions {
        bigint id PK
        bigint product_type_id FK
        bigint spec_dimension_id FK
        boolean is_required
        int sort_order
    }

    %% 主規格組合基本價
    product_base_prices {
        bigint id PK
        bigint product_type_id FK
        json spec_option_ids "選項組合 JSON array"
        decimal base_price
        timestamps created_at
        timestamps updated_at
    }

    %% 數量折扣
    quantity_discounts {
        bigint id PK
        int min_quantity
        decimal discount_rate "0.9 = 九折"
        timestamps created_at
        timestamps updated_at
    }

    %% 訂單
    orders {
        bigint id PK
        bigint user_id FK
        bigint product_type_id FK
        bigint printer_id FK "nullable，指派後填入"
        string order_no UK
        json spec_snapshot "下單時規格快照"
        decimal unit_price
        int quantity
        decimal discount_rate
        decimal total_price
        string file_path "圖檔路徑"
        json file_analysis "解析度、色彩、出血分析結果"
        enum status "pending|paid|reviewing|assigned|printing|shipped|completed|cancelled"
        date estimated_completion_date "nullable"
        timestamp paid_at
        timestamps created_at
        timestamps updated_at
    }

    %% 金流付款記錄
    payments {
        bigint id PK
        bigint order_id FK
        string gateway "newebpay"
        string transaction_id UK
        decimal amount
        enum status "pending|success|failed"
        json raw_response
        timestamps created_at
        timestamps updated_at
    }

    %% LINE 通知記錄
    line_notifications {
        bigint id PK
        bigint order_id FK
        bigint printer_id FK
        string message
        enum status "sent|failed"
        timestamp sent_at
        timestamps created_at
        timestamps updated_at
    }

    %% 關聯
    users ||--o{ orders : "has many"
    printers ||--o{ orders : "assigned to"
    product_types ||--o{ orders : "ordered as"
    product_types ||--o{ product_type_spec_dimensions : "has"
    spec_dimensions ||--o{ product_type_spec_dimensions : "used in"
    spec_dimensions ||--o{ spec_options : "has many"
    product_types ||--o{ product_base_prices : "has"
    orders ||--|| payments : "has one"
    orders ||--o{ line_notifications : "triggers"
    printers ||--o{ line_notifications : "receives"
